Use Base64 class from public domain
First of all, thank you Robert Harder http://iharder.net/base64

It is used because the previous class was not Android compatible.